Fix width on mobile project

--- a/src/styles/single-project.module.css
+++ b/src/styles/single-project.module.css
@@ -41,8 +41,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 2rem;
-    gap: 2rem;
+    margin: 1rem;
 }
 
 .tech {
